--- a/desc.html
+++ b/desc.html
@@ -46,10 +46,8 @@
                     американцев</p>
 
                 <div class="buttons">
-                    
-                    <button class="button"> <a href="#!" class="btn1">14500</a> </button>
-                    <button class="button1"> <a href="#!" class="btn2">Просмотреть</a> </button>
-                </div>
+                    <a href="#!" class="btn1">14500</a> 
+                    <a href="#!" class="btn2">Просмотреть</a> 
             </div>
         </div>
 
