--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
 
                 <div class="buttons">
 
-                  <button class="button"> <a href="#!" class="btn1">14500</a> </button>
-                    <button class="button1"> <a href="#!" class="btn2">Просмотреть</a> </button>
+                   <a href="#!" class="btn1">14500</a> 
+                   <a href="#!" class="btn2">Просмотреть</a> 
                 </div>
             </div>
         </div>
+</header>
 
-
-    </header>
     <main class="main04">
         <section class="main__section">
             <div class=" main__container ">
