--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=], initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./all.min.css">
     <link rel="shortcut icon" href="./IMG/Logo-16x16.png" type="image/x-icon">
     
     <title>STREET 88</title>
